agigunta lista prova

--- a/index.html
+++ b/index.html
@@ -10,5 +10,11 @@
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
          Ullam modi nihil officiis rem consectetur corporis enim quaerat doloremque odio explicabo natus, 
          fugit dolore dignissimos hic velit, facere laboriosam! Eum, suscipit.</p>
+    <ul>
+        <li>CLaudio</li>
+        <li>PYTHON</li>
+        <li>Prova</li>
+        <li>Calcio</li>
+    </ul>
 </body>
 </html>
